feat(departments): add crud api
