# internal/model/department.go
@@ -1,0 +1,11 @@
+// Package model contains domain models.
+package model
+
+import (
+	"github.com/xelarion/go-layout/internal/model/gen"
+)
+
+// Department represents a department
+type Department struct {
+	gen.Department
+}
