# internal/model/gen/departments.gen.go
@@ -1,0 +1,25 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package gen
+
+import (
+	"time"
+)
+
+const TableNameDepartment = "departments"
+
+// Department mapped from table <departments>
+type Department struct {
+	ID          uint      `gorm:"column:id;type:bigint;primaryKey;autoIncrement:true" json:"id"`
+	CreatedAt   time.Time `gorm:"column:created_at;type:timestamp with time zone;not null;default:now()" json:"created_at"`
+	Name        string    `gorm:"column:name;type:character varying(100);not null" json:"name"`
+	Description string    `gorm:"column:description;type:text;not null" json:"description"`
+	Enabled     bool      `gorm:"column:enabled;type:boolean;not null;default:true" json:"enabled"`
+}
+
+// TableName Department's table name
+func (*Department) TableName() string {
+	return TableNameDepartment
+}
